autoscheduler/frontend/src/components/SchedulingPage/SchedulePreview/SchedulePreview.css
.gpa {
    margin-left: auto;
    color: rgba(0, 0, 0, 0.54);
}

#card-header {
    text-align: center;
    width: 100%;
}

.configure-card {
    flex-grow: 1;
    flex-basis: 0;
    overflow-y: auto;
}

.list {
    width: 100%;
    overflow-y: auto;
}

.no-schedules {
    text-align: center;
}

.schedule-header {
    display: flex;
    align-items: center;
}

.schedule-name-container {
    display: flex;
    align-items: center;
}

.list-item-with-preview {
    display: flex;
    flex-direction: row;
}

.section-label-row {
    display: flex;
    align-items: center;
}

.color-box {
    display: inline-block;
    outline: 1px solid black;
    border: 1px solid white;
    margin-right: 4px;
    width: 12px;
    height: 12px;
}

.hidden {
    visibility: hidden;
    display: block;
    width: 0px;
}

.enable-pointer-events {
    pointer-events: all;
}

